apps/base/webhook-proxy/webhook-proxy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-proxy
  # namespace: webhook-proxy
spec:
  replicas: 1
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: webhook-proxy
  template:
    metadata:
      name: webhook-proxy
      labels:
        app: webhook-proxy
    spec:
      containers:
        - name: webhook-proxy
          image: ghcr.io/martijnjanssen/webhook-proxy:5
          imagePullPolicy: IfNotPresent
