apps/base/webhook-proxy/webhook-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-proxy
  labels:
    app: webhook-proxy
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: webhook-proxy
